--- a/src/main/webapp/WEB-INF/templates/authNtemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/authNtemplate.xhtml
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
       xmlns:h="jakarta.faces.html"
       xmlns:ui="jakarta.faces.facelets">
     <h:head>
@@ -8,11 +9,58 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+        <!-- Custom styles for this template -->
+        <h:outputStylesheet library="css" name="navbar-fixed.css" />
     </h:head>
     <h:body>
-        <h1><ui:insert name="title">DEFAULT AUTHN TITLE</ui:insert></h1>
-        <ui:insert name="content">DEFAULT AUTHN CONTENT</ui:insert>
+
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Blackboard LMS</a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <h:link styleClass="#{fn:startsWith(view.viewId, '/welcome.xhtml') ? 'nav-link active' : 'nav-link'}" outcome="/welcome.xhtml">Home</h:link>
+                        </li>
+
+                        <ui:fragment rendered="#{loginController.admin}">
+                            <li class="nav-item">
+                                <h:link styleClass="#{fn:startsWith(view.viewId, '/admin/welcome.xhtml') ? 'nav-link active' : 'nav-link'}" outcome="/admin/welcome.xhtml">Admin Access</h:link>                        
+                            </li>
+                        </ui:fragment>
+
+                        <ui:fragment rendered="#{loginController.student}">
+                            <li class="nav-item">
+                                <h:link styleClass="#{fn:startsWith(view.viewId, '/student/welcome.xhtml') ? 'nav-link active' : 'nav-link'}" outcome="/student/welcome.xhtml">Student Access</h:link>                        
+                            </li>
+                        </ui:fragment>
+
+                        <ui:fragment rendered="#{loginController.teacher}">
+                            <li class="nav-item">
+                                <h:link styleClass="#{fn:startsWith(view.viewId, '/teacher/welcome.xhtml') ? 'nav-link active' : 'nav-link'}" outcome="/teacher/welcome.xhtml">Teacher Access</h:link>                        
+                            </li>
+                        </ui:fragment>
+                    </ul>
+
+                    <h:form class="d-flex">
+                        <h:commandLink class="btn btn-outline-success me-2" action="#{loginController.doLogout()}" value="Logout"/>                        
+                    </h:form>
+                </div>
+            </div>
+        </nav>
+
+        <main class="container">
+            <div class="bg-body-tertiary p-5 rounded">
+                <h1><ui:insert name="title">DEFAULT AUTHN TITLE</ui:insert></h1>
+                <ui:insert name="content">DEFAULT AUTHN CONTENT</ui:insert>
+            </div>
+        </main>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </h:body>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
