--- a/src/main/webapp/WEB-INF/templates/publicTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/templates/publicTemplate.xhtml
@@ -8,9 +8,9 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+        <h:outputStylesheet library="css" name="publicTemplate.css"/>
     </h:head>
-    <h:body>
-        <h1><ui:insert name="title">DEFAULT TITLE</ui:insert></h1>
+    <h:body class="d-flex align-items-center py-4 bg-body-tertiary">
         <ui:insert name="content">DEFAULT CONTENT</ui:insert>
     </h:body>
     
